fixed error in test.8 - old syntax from previous sememster should be illegal

--- a/test.8
+++ b/test.8
@@ -52,31 +52,8 @@ Command name: 'echo'
 Error on line 7: unterminated string
 Error on line 9: syntax error
 Error on line 11: syntax error
-========== line 13 ==========
-Command name: 'a'
-    argv[0]: 'a'
-  stdin:  'i'
-  stdout: PIPE1
-  stderr: '<undirected>'
-Command name: 'b'
-    argv[0]: 'b'
-  stdin:  PIPE1
-  stdout: PIPE2
-  stderr: '<undirected>'
-Command name: 'c'
-    argv[0]: 'c'
-  stdin:  PIPE2
-  stdout: 'o'
-  stderr: '<undirected>'
-
-========== line 15 ==========
-Command name: 'echo'
-    argv[0]: 'echo'
-    argv[1]: 'OK, how about this?'
-  stdin:  '<undirected>'
-  stdout: '&'
-  stderr: '<undirected>'
-
+Error on line 13: illegal redirection
+Error on line 13: illegal redirection
 Error on line 15: syntax error
 Error on line 17: syntax error
 Error on line 19: syntax error
